--- a/app/src/main/res/values-ca/strings.xml
+++ b/app/src/main/res/values-ca/strings.xml
@@ -96,4 +96,8 @@
     <string name="location_picker_no_results">No s\'han trobat ubicacions</string>
     <string name="loading_new_data">S’estan baixant dades noves…</string>
     <string name="dialog_accept">Accepta</string>
+    <string name="settings_country_title">Proveïdor de dades</string>
+    <string name="settings_country_summary">Selecciona el proveïdor de dades de preus del carburant</string>
+    <string name="settings_country_es">Espanya</string>
+    <string name="settings_country_fr">França</string>
 </resources>
