--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -96,4 +96,8 @@
     <string name="location_picker_no_results">No se encontraron ubicaciones</string>
     <string name="loading_new_data">Descargando datos nuevos…</string>
     <string name="dialog_accept">Aceptar</string>
+    <string name="settings_country_title">Proveedor de datos</string>
+    <string name="settings_country_summary">Selecciona el proveedor de datos de precios de carburantes</string>
+    <string name="settings_country_es">España</string>
+    <string name="settings_country_fr">Francia</string>
 </resources>
