--- a/app/src/main/translations/an.yaml
+++ b/app/src/main/translations/an.yaml
@@ -94,3 +94,7 @@ location_picker_searching: Cercando…
 location_picker_no_results: No se trobó garra ubicación
 loading_new_data: Descargando datos nuevos…
 dialog_accept: Acceptar
+settings_country_title: Proveedor de datos
+settings_country_summary: Tría o proveedor de datos de precios de carburants
+settings_country_es: España
+settings_country_fr: Francia
