--- a/app/src/main/translations/es.yaml
+++ b/app/src/main/translations/es.yaml
@@ -94,3 +94,7 @@ location_picker_searching: Buscando…
 location_picker_no_results: No se encontraron ubicaciones
 loading_new_data: Descargando datos nuevos…
 dialog_accept: Aceptar
+settings_country_title: Proveedor de datos
+settings_country_summary: Selecciona el proveedor de datos de precios de carburantes
+settings_country_es: España
+settings_country_fr: Francia
