--- a/app/src/main/res/values-eu/strings.xml
+++ b/app/src/main/res/values-eu/strings.xml
@@ -3,6 +3,7 @@
     <string name="language_code">eu</string>
     <string name="language_name">Euskara</string>
     <string name="app_name">Carburoid</string>
+    <string name="menu_back">Atzera</string>
     <string name="menu_settings">Doikuntzak</string>
     <string name="menu_chart">Grafikoa</string>
     <string name="settings_category_language_appearance">Hizkuntza eta itxura</string>
