--- a/app/src/main/translations/an.yaml
+++ b/app/src/main/translations/an.yaml
@@ -1,6 +1,7 @@
 language_code: an
 language_name: Aragonés
 app_name: Carburoid
+menu_back: Atrás
 menu_settings: Configuración
 menu_chart: Gráfico
 settings_category_language_appearance: Luenga y apariencia
