--- a/app/src/main/translations/ar.yaml
+++ b/app/src/main/translations/ar.yaml
@@ -1,6 +1,7 @@
 language_code: ar
 language_name: العربية
 app_name: Carburoid
+menu_back: رجوع
 menu_settings: الإعدادات
 menu_chart: الرسم البياني
 settings_category_language_appearance: اللغة والمظهر
