--- a/app/src/main/res/values-an/strings.xml
+++ b/app/src/main/res/values-an/strings.xml
@@ -3,6 +3,7 @@
     <string name="language_code">an</string>
     <string name="language_name">Aragonés</string>
     <string name="app_name">Carburoid</string>
+    <string name="menu_back">Atrás</string>
     <string name="menu_settings">Configuración</string>
     <string name="menu_chart">Gráfico</string>
     <string name="settings_category_language_appearance">Luenga y apariencia</string>
