--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -3,6 +3,7 @@
     <string name="language_code">ar</string>
     <string name="language_name">العربية</string>
     <string name="app_name">Carburoid</string>
+    <string name="menu_back">رجوع</string>
     <string name="menu_settings">الإعدادات</string>
     <string name="menu_chart">الرسم البياني</string>
     <string name="settings_category_language_appearance">اللغة والمظهر</string>
