--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -3,6 +3,7 @@
     <string name="language_code">es</string>
     <string name="language_name">Español</string>
     <string name="app_name">Carburoid</string>
+    <string name="menu_back">Atrás</string>
     <string name="menu_settings">Ajustes</string>
     <string name="menu_chart">Gráfico</string>
     <string name="settings_category_language_appearance">Idioma y apariencia</string>
