--- a/app/src/main/translations/ca.yaml
+++ b/app/src/main/translations/ca.yaml
@@ -1,6 +1,7 @@
 language_code: ca
 language_name: Català
 app_name: Carburoid
+menu_back: Enrere
 menu_settings: Configuració
 menu_chart: Gràfic
 settings_category_language_appearance: Llengua i aparença
