--- a/app/src/main/translations/es.yaml
+++ b/app/src/main/translations/es.yaml
@@ -1,6 +1,7 @@
 language_code: es
 language_name: Español
 app_name: Carburoid
+menu_back: Atrás
 menu_settings: Ajustes
 menu_chart: Gráfico
 settings_category_language_appearance: Idioma y apariencia
