--- a/app/src/main/translations/gl.yaml
+++ b/app/src/main/translations/gl.yaml
@@ -1,6 +1,7 @@
 language_code: gl
 language_name: Galego
 app_name: Carburoid
+menu_back: Atrás
 menu_settings: Axustes
 menu_chart: Gráfico
 settings_category_language_appearance: Linguaxe e aparencia
