--- a/app/src/main/translations/eu.yaml
+++ b/app/src/main/translations/eu.yaml
@@ -17,6 +17,7 @@ theme_system: Auto (Sistema lehenetsia)
 settings_category_station_filters: Estazioko iragazkiak
 settings_filter_expensive: Ezkutatu garrantzigabeak
 settings_filter_expensive_summary: Gune bat garrantzigabetzat hartzen da beste bat badago hurbilagoa eta merkeagoa. (Gomendatua)
+settings_filter_expensive_warning: Carburoid diseinatuta dago iragazki hau gaituta funtzionatzeko. Desgaitzeak gasolinategi gehiago erakusten ditu, eta horrek aplikazioa nabarmen moteldu egiten du. Kontsideratu berriro gaitzea geroago.
 settings_filter_non_public: Prezio publikoak bakarrik erakutsi
 settings_filter_non_public_summary: Ezkutatu bazkidetza edo beste edozer eskatzen duten prezioak.
 settings_filter_beyond_sea: Itsas bestaldeko gasolindegiak ezkutatu
@@ -99,3 +100,7 @@ settings_country_title: Datu hornitzailea
 settings_country_summary: Aukeratu erregaien prezioen datuen hornitzailea
 settings_country_es: Espainia
 settings_country_fr: Frantzia
+settings_country_fr_warning_wip: Gasolinategi frantsesen datuak oraindik garapen-fasean daude. Ez dago oraindik izenik edo irekiera-ordurik eskuragarri.
+settings_warning_dialog_wip: Garapen-fasean
+warning_dialog_title: Abisua
+
