--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -19,6 +19,7 @@
     <string name="settings_category_station_filters">Filtrado de gasolineras</string>
     <string name="settings_filter_expensive">Ocultar irrelevantes</string>
     <string name="settings_filter_expensive_summary">Una gasolinera se considera irrelevante si hay otra más cercana y más barata. (Recomendado)</string>
+    <string name="settings_filter_expensive_warning">Carburoid está diseñada para funcionar con este filtro activado. Desactivarlo muestra muchas más estaciones, lo que ralentiza considerablemente la aplicación. Considera volver a activarlo más tarde.</string>
     <string name="settings_filter_non_public">Sólo precios públicos</string>
     <string name="settings_filter_non_public_summary">Oculta los precios que requieran afiliación.</string>
     <string name="settings_filter_beyond_sea">Oculta gasolineras al otro lado del mar</string>
@@ -101,4 +102,7 @@
     <string name="settings_country_summary">Selecciona el proveedor de datos de precios de carburantes</string>
     <string name="settings_country_es">España</string>
     <string name="settings_country_fr">Francia</string>
+    <string name="settings_country_fr_warning_wip">Los datos de las gasolineras francesas aún están en desarrollo. No hay nombres de estaciones ni horarios disponibles todavía.</string>
+    <string name="settings_warning_dialog_wip">En desarrollo</string>
+    <string name="warning_dialog_title">Advertencia</string>
 </resources>
