--- a/app/src/main/translations/es.yaml
+++ b/app/src/main/translations/es.yaml
@@ -17,6 +17,7 @@ theme_system: Automático (Sistema)
 settings_category_station_filters: Filtrado de gasolineras
 settings_filter_expensive: Ocultar irrelevantes
 settings_filter_expensive_summary: Una gasolinera se considera irrelevante si hay otra más cercana y más barata. (Recomendado)
+settings_filter_expensive_warning: Carburoid está diseñada para funcionar con este filtro activado. Desactivarlo muestra muchas más estaciones, lo que ralentiza considerablemente la aplicación. Considera volver a activarlo más tarde.
 settings_filter_non_public: Sólo precios públicos
 settings_filter_non_public_summary: Oculta los precios que requieran afiliación.
 settings_filter_beyond_sea: Oculta gasolineras al otro lado del mar
@@ -99,3 +100,7 @@ settings_country_title: Proveedor de datos
 settings_country_summary: Selecciona el proveedor de datos de precios de carburantes
 settings_country_es: España
 settings_country_fr: Francia
+settings_country_fr_warning_wip: Los datos de las gasolineras francesas aún están en desarrollo. No hay nombres de estaciones ni horarios disponibles todavía.
+settings_warning_dialog_wip: En desarrollo
+warning_dialog_title: Advertencia
+
