--- a/app/src/main/translations/an.yaml
+++ b/app/src/main/translations/an.yaml
@@ -103,4 +103,6 @@ settings_country_fr: Francia
 settings_country_fr_warning_wip: Os datos d'as gasolineras francesas encara son en fese de desarrollo. No i hai nombres d'estacions ni horarios disponibles.
 settings_warning_dialog_wip: En fese de desarrollo
 warning_dialog_title: Atención
+button_closer: Más cerca
+button_cheaper: Més barato
 
