--- a/app/src/main/translations/ar.yaml
+++ b/app/src/main/translations/ar.yaml
@@ -103,4 +103,7 @@ settings_country_fr: فرنسا
 settings_country_fr_warning_wip: بيانات محطات البنزين الفرنسية ما زالت قيد التطوير. ما فيش أسماء المحطات ولا مواقيت التشغيل متاحة حالياً.
 settings_warning_dialog_wip: قيد التطوير
 warning_dialog_title: تحذير
+button_closer: الأقرب
+button_cheaper: الأرخص
+
 
