--- a/app/src/main/translations/ca.yaml
+++ b/app/src/main/translations/ca.yaml
@@ -103,4 +103,6 @@ settings_country_fr: França
 settings_country_fr_warning_wip: Les dades de les gasolineres franceses encara són en fase de desenvolupament. No hi ha noms d'estacions ni horaris disponibles.
 settings_warning_dialog_wip: En desenvolupament
 warning_dialog_title: Advertència
+button_closer: Més a prop
+button_cheaper: Més barat
 
