--- a/app/src/main/translations/es.yaml
+++ b/app/src/main/translations/es.yaml
@@ -103,4 +103,6 @@ settings_country_fr: Francia
 settings_country_fr_warning_wip: Los datos de las gasolineras francesas aún están en desarrollo. No hay nombres de estaciones ni horarios disponibles todavía.
 settings_warning_dialog_wip: En desarrollo
 warning_dialog_title: Advertencia
+button_closer: Más cerca
+button_cheaper: Más barato
 
