--- a/app/src/main/translations/eu.yaml
+++ b/app/src/main/translations/eu.yaml
@@ -103,4 +103,6 @@ settings_country_fr: Frantzia
 settings_country_fr_warning_wip: Gasolinategi frantsesen datuak oraindik garapen-fasean daude. Ez dago oraindik izenik edo irekiera-ordurik eskuragarri.
 settings_warning_dialog_wip: Garapen-fasean
 warning_dialog_title: Abisua
+button_closer: Gertuago
+button_cheaper: Merkeago
 
