--- a/app/src/main/translations/gl.yaml
+++ b/app/src/main/translations/gl.yaml
@@ -103,4 +103,5 @@ settings_country_fr: Francia
 settings_country_fr_warning_wip: Os datos das gasolineras francesas aínda están en desenvolvemento. Aínda non hai nomes de estacións nin horarios dispoñibles.
 settings_warning_dialog_wip: En desenvolvemento
 warning_dialog_title: Aviso
-
+button_closer: Máis cerca
+button_cheaper: Máis barato
