--- a/app/src/main/res/values-an/strings.xml
+++ b/app/src/main/res/values-an/strings.xml
@@ -105,4 +105,6 @@
     <string name="settings_country_fr_warning_wip">Os datos d\'as gasolineras francesas encara son en fese de desarrollo. No i hai nombres d\'estacions ni horarios disponibles.</string>
     <string name="settings_warning_dialog_wip">En fese de desarrollo</string>
     <string name="warning_dialog_title">Atención</string>
+    <string name="button_closer">Más cerca</string>
+    <string name="button_cheaper">Més barato</string>
 </resources>
