--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -105,4 +105,6 @@
     <string name="settings_country_fr_warning_wip">بيانات محطات البنزين الفرنسية ما زالت قيد التطوير. ما فيش أسماء المحطات ولا مواقيت التشغيل متاحة حالياً.</string>
     <string name="settings_warning_dialog_wip">قيد التطوير</string>
     <string name="warning_dialog_title">تحذير</string>
+    <string name="button_closer">الأقرب</string>
+    <string name="button_cheaper">الأرخص</string>
 </resources>
