--- a/meta/translations/es.yaml
+++ b/meta/translations/es.yaml
@@ -1,6 +1,6 @@
 project_name: Carburoid
 splash_motto: Llena al mejor precio, más cerca
-short_description: Encuentra gasolineras en España por precio y distancia
+short_description: Encuentra gasolineras en España y Francia por precio y distancia
 full_description_md: |+
   Carburoid muestra solo las gasolineras que merecen consideración.
   Ordenadas por distancia, si una gasolinera es más cara que las más cercanas, no se muestra.
@@ -9,7 +9,7 @@ full_description_md: |+
 
   Funcionalidades:
 
-  - 🏛️ Datos actualizados del Ministerio de Industria
+  - 🏛️ Datos oficiales de los gobiernos: España y Francia
   - 🎯 Solo gasolineras relevantes: o más cercanas o más baratas que otras
   - 🕒 Considera los horarios de apertura
   - 🗺️ Se integra con la aplicación de mapas que uses
